--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                                                             <li><i class="icon_check"></i>Content</li>
                                                             <li><i class="icon_check"></i>Content</li> -->
                                                         </ul>
-                                                        <a href="https://dashboard.flutterwave.com/donate/n5iq8tz8em1p" class="btn btn-custom">Get Ticket</a>
+                                                        <a href="https://flutterwave.com/pay/missusireg" class="btn btn-custom">Get Ticket</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -608,7 +608,7 @@
                                                             <li><i class="icon_check"></i>Barbecue</li>
                                                             <li><i class="icon_check"></i>Miss Usi magazine</li>
                                                         </ul>
-                                                        <a href="https://dashboard.flutterwave.com/donate/ixvc7yaatyut" class="btn btn-custom">Get Ticket</a>
+                                                        <a href="https://flutterwave.com/pay/missusivvip" class="btn btn-custom">Get Ticket</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -626,7 +626,7 @@
                                                             <li><i class="icon_check"></i>Barbecue</li>
                                                             <!-- <li><i class="icon_check"></i>Content</li> -->
                                                         </ul>
-                                                        <a href="https://dashboard.flutterwave.com/donate/wxlvfkbd597y" class="btn btn-custom">Get Ticket</a>
+                                                        <a href="https://flutterwave.com/pay/missusivip" class="btn btn-custom">Get Ticket</a>
                                                     </div>
                                                 </div>
                                             </div>
