--- a/index.html
+++ b/index.html
@@ -687,16 +687,14 @@
                             <div class="wm-1"></div>
                             <i class="icon_mobile id-color size40 mb20"></i>
                             <h5>Call Us</h5>
-                            <h4>(208) 333 9296</h4>
+                            <h4>08111440066</h4>
                         </div>
 
                         <div class="col-md-4">
                             <div class="wm-1"></div>
                             <i class="icon_house_alt id-color size40 mb20"></i>
                             <h5>Address</h5>
-                            <h4>Orange County Convention Center,<br>
-                                9800 International Dr,<br>
-                                Orlando, FL 32819, USA</h4>
+                            <h4>Usi Ekiti Town Hall</h4>
                         </div>
 
                         <div class="col-md-4">
@@ -704,7 +702,7 @@
                             <div class="wm-1"></div>
                             <i class="icon_mail_alt id-color size40 mb20"></i>
                             <h5>Email Us</h5>
-                            <h4>contact@eventbiz.com</h4>
+                            <h4>egbeomousi@gmail.com</h4>
                         </div>
                     </div>
                 </div>
