--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                             <h3>Media & Brand</h3>
                             <div class="spacer-single"></div>
                             <img src="images/logo/a1.png" alt="" class="grey-hover">
-                            <img src="images/logo/a2.png" alt="" class="grey-hover">
+<!--                             <img src="images/logo/a2.png" alt="" class="grey-hover"> -->
                             <!-- <img src="images/logo/a3.png" alt="" class="grey-hover">
                             <img src="images/logo/a4.png" alt="" class="grey-hover">
                             <img src="images/logo/a5.png" alt="" class="grey-hover"> -->
