--- a/index.html
+++ b/index.html
@@ -653,13 +653,13 @@
                         <div class="col-md-4 text-center">
                             <i class="icon-flag id-color mb20 size40"></i>
                             <h3>Venue</h3>
-                            <p>Large audiotorium with capacity of Eight hunded participants is also equipped with advanced facilities for your pleasure.</p>
+                            <p>Large audiotorium with capacity of 250 participants is also equipped with advanced facilities for your pleasure.</p>
                         </div>
 
                         <div class="col-md-4 text-center">
                             <i class="icon-bike id-color mb20 size40"></i>
                             <h3>Transport</h3>
-                            <p>The location of the event is located in the city center so it is easily reached by private or public vehicles which available for 24 hours.</p>
+                            <p>The location of the event is located in the city center so it is easily reached by private or public vehicles.</p>
                         </div>
 
                         <div class="col-md-4 text-center">
