--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                     <img src="images/team/3.png" class="img-responsive" alt="">
                                 </figure>
 
-                                <h3>Engr. Debo Ayorinde</h3>
+                                <h3>Prof. Oluwole Agbede</h3>
                                 <span class="subtitle">President Egbe Omo Usi</span>
                             </div>
                         </div>
