--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <nav>
                             <ul id="mainmenu">
                                 <li><a class="active" href="#top">Miss Usi</a></li>
-                                <li><a href="#section-schedules">Pageant Profiles   </a></li>
+                                <li><a href="#section-schedules">Contestants Profile   </a></li>
                                 <li><a href="#section-tickets">Tickets</a></li>
                                 <li><a href="#section-info">Contact</a></li>
                             </ul>
