--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                                                             <li><i class="icon_check"></i>VVIP Table</li>
                                                             <li><i class="icon_check"></i>Drinks</li>
                                                             <li><i class="icon_check"></i>Barbecue</li>
-                                                            <li><i class="icon_check"></i>Miss Usi Brochure</li>
+                                                            <li><i class="icon_check"></i>Usi Day Brochure</li>
                                                         </ul>
                                                         <a href="https://flutterwave.com/pay/missusivvip" class="btn btn-custom">Get Ticket</a>
                                                     </div>
