--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                 </figure>
 
                                 <h3>Prof. Oluwole Agbede</h3>
-                                <span class="subtitle">President Egbe Omo Usi</span>
+                                <span class="subtitle">President, Egbe Omo Usi</span>
                             </div>
                         </div>
 
