--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
 
         <!-- footer begin -->
         <footer>
-            <div class="container text-center text-light">
+<!--             <div class="container text-center text-light">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="social-icons big">
@@ -729,9 +729,9 @@
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="subfooter">
+            </div> -->
+<!--  class="subfooter" from below div -->
+            <div>
                 <div class="container text-center">
                     <div class="row">
                         <div class="col-md-12">
