--- a/index.html
+++ b/index.html
@@ -716,16 +716,16 @@
 
         <!-- footer begin -->
         <footer>
-<!--             <div class="container text-center text-light">
+            <!-- <div class="container text-center text-light">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="social-icons big">
                             <a href="https://www.facebook.com/omousioro"><i class="fa fa-facebook fa-lg"></i></a>
                             <a href="#"><i class="fa fa-twitter fa-lg"></i></a>
-                            <!-- <a href="#"><i class="fa fa-rss fa-lg"></i></a>
+                             <a href="#"><i class="fa fa-rss fa-lg"></i></a>
                             <a href="#"><i class="fa fa-google-plus fa-lg"></i></a>
                             <a href="#"><i class="fa fa-skype fa-lg"></i></a>
-                            <a href="#"><i class="fa fa-dribbble fa-lg"></i></a> -->
+                            <a href="#"><i class="fa fa-dribbble fa-lg"></i></a>
                         </div>
                     </div>
                 </div>
