--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                                 <li><a href="#section-schedules">Contestants Profile   </a></li>
                                 <li><a href="#section-tickets">Tickets</a></li>
                                 <li><a href="#section-info">Contact</a></li>
+				<li><a href="https://flutterwave.com/pay/missusiform">MISS USI FORM</a></li>
                             </ul>
                         </nav>
 
