--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                                                 <div class="pricing-s1 mb30">
                                                     <div class="top">
                                                         <h2>Regular</h2>
-                                                        <p class="price"><span class="currency">#</span> <b>2000</b> <span class="month">/1 person</span></p>
+                                                        <p class="price"><span class="currency">#</span> <b>1000</b> <span class="month">/1 person</span></p>
                                                     </div>
                                                     <div class="bottom">
                                                         <ul>
@@ -596,10 +596,29 @@
                                             </div>
                                             <div class="col-sm-4">
                                                 <div class="pricing-s1 featured mb30">
-                                                    <div class="ribbon">Executive</div>
+                                                    <div class="ribbon">Platinum</div>
                                                     <div class="top">
-                                                        <h2>VVIP</h2>
-                                                        <p class="price"><span class="currency">#</span> <b>100,000</b> <span class="month">/5 person</span></p>
+                                                        <h2>VIP</h2>
+                                                        <p class="price"><span class="currency">#</span> <b>50,000</b> <span class="month">/5 person</span></p>
+                                                    </div>
+                                                    <div class="bottom">
+                                                        <ul>
+                                                            <li><i class="icon_check"></i>5 Seaters</li>
+                                                            <li><i class="icon_check"></i>VVIP Table</li>
+                                                            <li><i class="icon_check"></i>Drinks</li>
+                                                            <li><i class="icon_check"></i>Barbecue</li>
+                                                            <li><i class="icon_check"></i>Usi Day Brochure</li>
+                                                        </ul>
+                                                        <a href="https://flutterwave.com/pay/missusivvip" class="btn btn-custom">Get Ticket</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+					    <div class="col-sm-4">
+                                                <div class="pricing-s1 featured mb30">
+                                                    <div class="ribbon">Gold</div>
+                                                    <div class="top">
+                                                        <h2>VIP</h2>
+                                                        <p class="price"><span class="currency">#</span> <b>50,000</b> <span class="month">/5 person</span></p>
                                                     </div>
                                                     <div class="bottom">
                                                         <ul>
@@ -614,7 +633,8 @@
                                                 </div>
                                             </div>
                                             <div class="col-sm-4">
-                                                <div class="pricing-s1 mb30">
+                                                <div class="pricing-s1 featured mb30">
+                                                    <div class="ribbon">Silver</div>
                                                     <div class="top">
                                                         <h2>VIP</h2>
                                                         <p class="price"><span class="currency">#</span> <b>50,000</b> <span class="month">/5 person</span></p>
@@ -622,12 +642,12 @@
                                                     <div class="bottom">
                                                         <ul>
                                                             <li><i class="icon_check"></i>5 Seaters</li>
-                                                            <li><i class="icon_check"></i>VIP Table</li>
+                                                            <li><i class="icon_check"></i>VVIP Table</li>
                                                             <li><i class="icon_check"></i>Drinks</li>
                                                             <li><i class="icon_check"></i>Barbecue</li>
-                                                            <!-- <li><i class="icon_check"></i>Content</li> -->
+                                                            <li><i class="icon_check"></i>Usi Day Brochure</li>
                                                         </ul>
-                                                        <a href="https://flutterwave.com/pay/missusivip" class="btn btn-custom">Get Ticket</a>
+                                                        <a href="https://flutterwave.com/pay/missusivvip" class="btn btn-custom">Get Ticket</a>
                                                     </div>
                                                 </div>
                                             </div>
