--- a/index.html
+++ b/index.html
@@ -596,15 +596,15 @@
                                             </div>
                                             <div class="col-sm-4">
                                                 <div class="pricing-s1 featured mb30">
-                                                    <div class="ribbon">Platinum</div>
+                                                    <div class="ribbon">Silver</div>
                                                     <div class="top">
                                                         <h2>VIP</h2>
-                                                        <p class="price"><span class="currency">#</span> <b>50,000</b> <span class="month">/5 person</span></p>
+                                                        <p class="price"><span class="currency">#</span> <b>20,000</b> <span class="month">/5 person</span></p>
                                                     </div>
                                                     <div class="bottom">
                                                         <ul>
                                                             <li><i class="icon_check"></i>5 Seaters</li>
-                                                            <li><i class="icon_check"></i>VVIP Table</li>
+                                                            <li><i class="icon_check"></i>VIP Table</li>
                                                             <li><i class="icon_check"></i>Drinks</li>
                                                             <li><i class="icon_check"></i>Barbecue</li>
                                                             <li><i class="icon_check"></i>Usi Day Brochure</li>
@@ -618,7 +618,7 @@
                                                     <div class="ribbon">Gold</div>
                                                     <div class="top">
                                                         <h2>VIP</h2>
-                                                        <p class="price"><span class="currency">#</span> <b>50,000</b> <span class="month">/5 person</span></p>
+                                                        <p class="price"><span class="currency">#</span> <b>30,000</b> <span class="month">/5 person</span></p>
                                                     </div>
                                                     <div class="bottom">
                                                         <ul>
@@ -634,7 +634,7 @@
                                             </div>
                                             <div class="col-sm-4">
                                                 <div class="pricing-s1 featured mb30">
-                                                    <div class="ribbon">Silver</div>
+                                                    <div class="ribbon">Platinum</div>
                                                     <div class="top">
                                                         <h2>VIP</h2>
                                                         <p class="price"><span class="currency">#</span> <b>50,000</b> <span class="month">/5 person</span></p>
