--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <!-- section close -->
 
             <!-- section begin -->
-            <section id="section-schedules" aria-label="section-services-tab" data-bgcolor="#f5f5f5">
+<!--             <section id="section-schedules" aria-label="section-services-tab" data-bgcolor="#f5f5f5">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center">
@@ -463,7 +463,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <!-- section close -->
 
             <!-- section begin -->
