--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
                                                             <li><i class="icon_check"></i>Barbecue</li>
                                                             <li><i class="icon_check"></i>Usi Day Brochure</li>
                                                         </ul>
-                                                        <a href="https://flutterwave.com/pay/missusivvip" class="btn btn-custom">Get Ticket</a>
+                                                        <a href="https://flutterwave.com/pay/missusisilver" class="btn btn-custom">Get Ticket</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -628,7 +628,7 @@
                                                             <li><i class="icon_check"></i>Barbecue</li>
                                                             <li><i class="icon_check"></i>Usi Day Brochure</li>
                                                         </ul>
-                                                        <a href="https://flutterwave.com/pay/missusivvip" class="btn btn-custom">Get Ticket</a>
+                                                        <a href="https://flutterwave.com/pay/missusigold" class="btn btn-custom">Get Ticket</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -647,7 +647,7 @@
                                                             <li><i class="icon_check"></i>Barbecue</li>
                                                             <li><i class="icon_check"></i>Usi Day Brochure</li>
                                                         </ul>
-                                                        <a href="https://flutterwave.com/pay/missusivvip" class="btn btn-custom">Get Ticket</a>
+                                                        <a href="https://flutterwave.com/pay/missusiplat" class="btn btn-custom">Get Ticket</a>
                                                     </div>
                                                 </div>
                                             </div>
