--- a/index.html
+++ b/index.html
@@ -504,9 +504,9 @@
                                 <div class="col-md-6 item">
                                     <div class="de_testi opt-2">
                                         <blockquote>
-                                            <p>A very hearty congratulations to all Usians both at home and in diaspora as we celebrate the 40th anniversary of USI DAY</p>
+                                            <p>Heartily rejoice with his royal highness Oba George Adedayo Akande and also congratulates the entire Usi Sons and Daughters at large on the 40th Usi Day celebration.</p>
                                             <div class="de_testi_by">
-                                                <b>Olanrenwaju Funmilayo</b> | FUSU President.
+                                                <b>Dada K. John</b> | FUSU President.
                                             </div>
                                         </blockquote>
                                     </div>
