--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-6 item">
+                                <!-- <div class="col-md-6 item">
                                     <div class="de_testi opt-2">
                                         <blockquote>
                                             <p>I learn many digital things! A wonderful event thank you! The best event as it proved by quality. I would definitely return for future events.</p>
@@ -521,7 +521,7 @@
                                             </div>
                                         </blockquote>
                                     </div>
-                                </div>
+                                </div> -->
 								
                             </div>
                         </div>
