--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                                         <blockquote>
                                             <p>Heartily rejoice with his royal highness Oba George Adedayo Akande and also congratulates the entire Usi Sons and Daughters at large on the 40th Usi Day celebration.</p>
                                             <div class="de_testi_by">
-                                                <b>Dada K. John</b> | FUSU President.
+                                                <b>Dada Kehinde John</b> | FUSU President.
                                             </div>
                                         </blockquote>
                                     </div>
