--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                                 <div class="col-md-6 item">
                                     <div class="de_testi opt-2">
                                         <blockquote>
-                                            <p>As we celebrate 40th Usi Day anniversary, Eminent underwear takes a great pleasure to facilitate with all sons and daughters of Usi Ekiti
+                                            <p>As we celebrate 40th Usi Day anniversary, Eminent underwear takes a great pleasure to felicitate with all sons and daughters of Usi Ekiti
                                                 Our prayer is that joy and happiness will never depart from us all.</p>
                                             <div class="de_testi_by">
                                                 <b>Adetona Ayodeji</b> | Eminent Underwear.
