--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <!-- section close -->
 
             <!-- section begin -->
-<!--             <section id="section-schedules" aria-label="section-services-tab" data-bgcolor="#f5f5f5">
+            <section id="section-schedules" aria-label="section-services-tab" data-bgcolor="#f5f5f5">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center">
@@ -326,19 +326,20 @@
                                                     <div class="schedule-item">
                                                         <div class="sc-time">HEIGHT - 5'7</div>
                                                         <div class="sc-pic">
-                                                            <img src="images/team/1.png" class="img-circle" alt="">
+                                                            <img src="images/team/busola.png" class="img-circle" alt="">
                                                         </div>
                                                         <div class="sc-name">
-                                                            <h4>EBI ILOTIN</h4>
-                                                            <span><b>FAMILY CLAN</b></span>
+                                                            <h4>EBI OISA</h4>
+                                                            <span><b>CLAN (FAMILY)</b></span>
                                                         </div>
                                                         <div class="sc-info">
-                                                            <h3 style="color:#000000">Adebola Juliana</h3>
-                                                            <p><b>About:</b> The procedure for normal check-in, Receiving, Registration<br>
-                                                            <b>School:</b> Ekiti State University<br>
-                                                            <b>Career:</b> Medicine <br>
-                                                            <b>Level:</b> 300L<br>
-                                                            <b>Quote:</b> Lorem ipsum text and ghsyt hhhs </p>
+                                                            <h3 style="color:#000000">Oluwabusolami Saliu</h3>
+                                                            <!-- <p><b>About:</b> The procedure for normal check-in, Receiving, Registration<br> -->
+                                                            <b>Institution:</b> Obafemi Awolowo University, Ile-Ife, Osun State.<br>
+                                                            <b>current Job:</b> Student <br>
+                                                            <b>State of residence:</b> Lagos<br>
+                                                            <b>Motivation:</b> I so much love my town and her culture, and by participating in one of
+                                                            her heritage, it will enable me to know more about the culture and also to be committed more in the town activities.</p>
                                                         </div>
                                                         <div class="clearfix"></div>
                                                     </div>
@@ -347,7 +348,7 @@
                                         </div>
                                     </div>
 
-                                    <div id="tab2" class="tab_single_content">
+                                    <!-- <div id="tab2" class="tab_single_content">
                                         <div class="row">
                                             <div class="col-md-12">
                                                 <div class="schedule-listing">
@@ -373,9 +374,9 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
 
-                                    <div id="tab3" class="tab_single_content">
+                                    <!-- <div id="tab3" class="tab_single_content">
                                         <div class="row">
                                             <div class="col-md-12">
                                                 <div class="schedule-listing">
@@ -401,9 +402,9 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
 
-                                    <div id="tab4" class="tab_single_content">
+                                    <!-- <div id="tab4" class="tab_single_content">
                                         <div class="row">
                                             <div class="col-md-12">
                                                 <div class="schedule-listing">
@@ -429,9 +430,9 @@
                                                 </div>  
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
 
-                                    <div id="tab5" class="tab_single_content">
+                                    <!-- <div id="tab5" class="tab_single_content">
                                         <div class="row">
                                             <div class="col-md-12">
                                                 <div class="schedule-listing">
@@ -457,13 +458,13 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section> -->
+            </section>
             <!-- section close -->
 
             <!-- section begin -->
