--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <nav>
                             <ul id="mainmenu">
                                 <li><a class="active" href="#top">Miss Usi</a></li>
-                                <li><a href="#section-schedules">Contestants Profile   </a></li>
+                                <li><a href="#contestants-profile">Contestants Profile   </a></li>
                                 <li><a href="#section-tickets">Tickets</a></li>
                                 <li><a href="#section-info">Contact</a></li>
 				<li><a href="https://flutterwave.com/pay/missusiform">MISS USI FORM</a></li>
@@ -283,7 +283,7 @@
             <!-- section close -->
 
             <!-- section begin -->
-            <section id="section-schedules" aria-label="section-services-tab" data-bgcolor="#f5f5f5">
+            <section id="contestants-profile" aria-label="section-services-tab" data-bgcolor="#f5f5f5">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center">
