--- a/index.html
+++ b/index.html
@@ -348,33 +348,33 @@
                                         </div>
                                     </div>
 
-                                    <!-- <div id="tab2" class="tab_single_content">
+                                    <div id="tab2" class="tab_single_content">
                                         <div class="row">
                                             <div class="col-md-12">
                                                 <div class="schedule-listing">
                                                     <div class="schedule-item">
-                                                        <div class="sc-time">HEIGHT - 5'7</div>
+                                                        <div class="sc-time">HEIGHT - NIL</div>
                                                         <div class="sc-pic">
-                                                            <img src="images/team/1.png" class="img-circle" alt="">
+                                                            <img src="images/team/moyinoluwa.png" class="img-circle" alt="">
                                                         </div>
                                                         <div class="sc-name">
-                                                            <h4>EBI ILOTIN</h4>
-                                                            <span><b>FAMILY CLAN</b></span>
+                                                            <h4>EBI IJEMO</h4>
+                                                            <span><b>CLAN(FAMILY)</b></span>
                                                         </div>
                                                         <div class="sc-info">
-                                                            <h3 style="color:#000000">Adebola Juliana</h3>
-                                                            <p><b>About:</b> The procedure for normal check-in, Receiving, Registration<br>
-                                                            <b>School:</b> Ekiti State University<br>
-                                                            <b>Career:</b> Medicine <br>
-                                                            <b>Level:</b> 300L<br>
-                                                            <b>Quote:</b> Lorem ipsum text and ghsyt hhhs </p>
+                                                            <h3 style="color:#000000">Moyinoluwa Jimoh</h3>
+                                                            <!-- <p><b>About:</b> The procedure for normal check-in, Receiving, Registration<br> -->
+                                                            <b>Institution:</b> Ekiti State University, Ado-Ekiti, Ekiti State.<br>
+                                                            <b>current Job:</b> Student <br>
+                                                            <b>State of residence:</b> Lagos<br>
+                                                            <b>Motivation:</b> My Primary reason for joining this Pageant is to develop and boost my self-esteem and have a sense of achievement and fulfilment</p>
                                                         </div>
                                                         <div class="clearfix"></div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div> -->
+                                    </div>
 
                                     <!-- <div id="tab3" class="tab_single_content">
                                         <div class="row">
