--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                                                     <div class="schedule-item">
                                                         <div class="sc-time">HEIGHT - NIL</div>
                                                         <div class="sc-pic">
-                                                            <img src="images/team/moyinoluwa.png" class="img-circle" alt="">
+                                                            <img src="images/team/moyinoluwa.png"  alt="">
                                                         </div>
                                                         <div class="sc-name">
                                                             <h4>EBI IJEMO</h4>
