--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             </div>
                         </div>
 
-                        <!-- <div class="col-md-3 mb30">
+                        <div class="col-md-3 mb30">
                             <div class="profile_pic text-center">
                                 <figure class="picframe mb30">
                                     <a class="image-popup" href="images/team/4.jpg">
@@ -185,7 +185,7 @@
                                 <h3>Oscar Helman</h3>
                                 <span class="subtitle">Founder & CEO</span>
                             </div>
-                        </div> -->
+                        </div>
 
                         <!-- <div class="col-md-3 mb30">
                             <div class="profile_pic text-center">
@@ -329,7 +329,7 @@
                                                             <img src="images/team/busola.png" alt="">
                                                         </div>
                                                         <div class="sc-name">
-                                                            <h4>EBI OISA</h4>
+                                                            <h4>EBI ILESA</h4>
                                                             <span><b>CLAN (FAMILY)</b></span>
                                                         </div>
                                                         <div class="sc-info">
