--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3 mb30">
+                        <!-- <div class="col-md-3 mb30">
                             <div class="profile_pic text-center">
                                 <figure class="picframe mb30">
                                     <a class="image-popup" href="images/team/4.jpg">
@@ -185,7 +185,7 @@
                                 <h3>Oscar Helman</h3>
                                 <span class="subtitle">Founder & CEO</span>
                             </div>
-                        </div>
+                        </div> -->
 
                         <!-- <div class="col-md-3 mb30">
                             <div class="profile_pic text-center">
@@ -376,33 +376,33 @@
                                         </div>
                                     </div>
 
-                                    <!-- <div id="tab3" class="tab_single_content">
+                                    <div id="tab2" class="tab_single_content">
                                         <div class="row">
                                             <div class="col-md-12">
                                                 <div class="schedule-listing">
                                                     <div class="schedule-item">
-                                                        <div class="sc-time">HEIGHT - 5'7</div>
+                                                        <div class="sc-time">HEIGHT - NIL</div>
                                                         <div class="sc-pic">
-                                                            <img src="images/team/1.png" class="img-circle" alt="">
+                                                            <img src="images/team/sunmisola.jpg" alt="">
                                                         </div>
                                                         <div class="sc-name">
-                                                            <h4>EBI ILOTIN</h4>
-                                                            <span><b>FAMILY CLAN</b></span>
+                                                            <h4>EBI IJANA</h4>
+                                                            <span><b>CLAN(FAMILY)</b></span>
                                                         </div>
                                                         <div class="sc-info">
-                                                            <h3 style="color:#000000">Adebola Juliana</h3>
-                                                            <p><b>About:</b> The procedure for normal check-in, Receiving, Registration<br>
-                                                            <b>School:</b> Ekiti State University<br>
-                                                            <b>Career:</b> Medicine <br>
-                                                            <b>Level:</b> 300L<br>
-                                                            <b>Quote:</b> Lorem ipsum text and ghsyt hhhs </p>
+                                                            <h3 style="color:#000000">Sunmisola Olarenwaju</h3>
+                                                            <!-- <p><b>About:</b> The procedure for normal check-in, Receiving, Registration<br> -->
+                                                            <b>Institution:</b> Batholomew College of Health, Ilorin, Kwara State.<br>
+                                                            <b>current Job:</b> Student <br>
+                                                            <b>State of residence:</b> Lagos<br>
+                                                            <b>Motivation:</b> It is the only way to get to know new people, my people and culture.</p>
                                                         </div>
                                                         <div class="clearfix"></div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div> -->
+                                    </div>
 
                                     <!-- <div id="tab4" class="tab_single_content">
                                         <div class="row">
