--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                                                     <div class="schedule-item">
                                                         <div class="sc-time">HEIGHT - NIL</div>
                                                         <div class="sc-pic">
-                                                            <img src="images/team/sunmisola.jpg" alt="">
+                                                            <img src="images/team/sunmisola.jpeg" alt="">
                                                         </div>
                                                         <div class="sc-name">
                                                             <h4>EBI IJANA</h4>
