--- a/index.html
+++ b/index.html
@@ -237,6 +237,9 @@
                     </div>
                 </div>
             </section>
+
+            <p>Open a PDF file <a href="/uploads/media/default/0001/01/540cb75550adf33f281f29132dddd14fded85bfc.pdf">example</a>.</p>
+        
             <!-- section close -->
 
             <!-- section begin -->
