--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Miss Usi Day - Who wears the crown</title>
+    <title>Miss Usi - Who wears the crown</title>
     <link rel="shortcut icon" type="image/png" href="images/logo-light.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Usi-Ekiti kind of beauty pageantry is not one that encourages nudity or any immorality. It is aimed at creating a familiarisation avenue for our youths, home and abroad. It is also channeled to build confidence and raise self esteem of our young female undergraduates to prepare them for excellent and exemplary exploit among their peers.">
@@ -60,7 +60,8 @@
                                 <li><a href="#contestants-profile">Contestants Profile   </a></li>
                                 <li><a href="#section-tickets">Tickets</a></li>
                                 <li><a href="#section-info">Contact</a></li>
-				<li><a href="https://flutterwave.com/pay/missusiform">MISS USI FORM</a></li>
+                                <li><a href="#section-info">Downloadables</a></li>
+				                <li><a href="https://flutterwave.com/pay/missusiform">MISS USI FORM</a></li>
                             </ul>
                         </nav>
 
@@ -103,6 +104,10 @@
                                     <h1 class="big">Miss Usi <span class="id-color">2021</span></h1>
                                     <div class="spacer-single"></div>
                                     <div class="subtitle s2"><span><i class="fa fa-calendar-o id-color"></i>August  6th to 7th</span><span><i class="fa fa-map-marker id-color"></i>Usi Town Hall</span></div>
+                                    <!-- <p>Download  <a style="" href="images/team/campdaily.pdf">CAMP DAILY ACTIVITIES AND SCHEDULES</a>.</p> -->
+                                    <marquee style="color:#FBA507;" width="60%" direction="left" height="100px">
+                                        <b>Kindly navigate to <i>DOWNLOADABLES</i> in the <i>MENU</i> section to get some resources.</b>
+                                        </marquee>
                                 </div>
                             </div>
                         </div>
@@ -238,7 +243,7 @@
                 </div>
             </section>
 
-            <p>Open a PDF file <a href="/uploads/media/default/0001/01/540cb75550adf33f281f29132dddd14fded85bfc.pdf">example</a>.</p>
+            
         
             <!-- section close -->
 
@@ -760,7 +765,7 @@
                 <div class="container text-center">
                     <div class="row">
                         <div class="col-md-12">
-                            &copy; Copyright 2021 - MissUsiDay Team<br> <a style="color:#f7c51e" href="https://www.facebook.com/AdmollX">Admoll Adefemi</a>                     
+                            &copy; Copyright 2021 - Miss Usi Team<br> <a style="color:#f7c51e" href="https://www.facebook.com/AdmollX">Admoll Adefemi</a>                     
                         </div>
                     </div>
                 </div>
