--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                     <h1 class="big">Miss Usi <span class="id-color">2021</span></h1>
                                     <div class="spacer-single"></div>
                                     <div class="subtitle s2"><span><i class="fa fa-calendar-o id-color"></i>August  6th to 7th</span><span><i class="fa fa-map-marker id-color"></i>Usi Town Hall</span></div>
-                                    <!-- <p>Download  <a style="" href="images/team/campdaily.pdf">CAMP DAILY ACTIVITIES AND SCHEDULES</a>.</p> -->
+                                   
                                     <marquee style="color:#FBA507;" width="60%" direction="left" height="100px">
                                         <b>Kindly navigate to <i>DOWNLOADABLES</i> in the <i>MENU</i> section to get some resources.</b>
                                         </marquee>
@@ -696,6 +696,14 @@
                             <i class="icon-map id-color mb20 size40"></i>
                             <h3>Hotel</h3>
                             <p>There are many hotels and motels available around the event location for temporary residence. Get your resevation as early as possible.</p>
+                        </div>
+
+                        <div class="col-md-4 text-center">
+                            <i class="icon-download id-color mb20 size40"></i>
+                            <h3>Downloadables</h3>
+                            <p><a style="color: #FBA507;" href="images/team/campdaily.pdf"><b>CAMP DAILY ACTIVITIES AND SCHEDULES</b></a><br>
+                            <a style="color: #FBA507;" href="images/team/CAMPandprospectus.pdf"><b>CAMP & PROSPECTUS</b></a><br>
+                            <a style="color: #FBA507;" href="images/team/ScoretemplateandSchedules.pdf"><b>SCORE TEMPLATE & SCHEDULES</b></a></p>
                         </div>
 
                     </div>
