--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 <li><a href="#contestants-profile">Contestants Profile   </a></li>
                                 <li><a href="#section-tickets">Tickets</a></li>
                                 <li><a href="#section-info">Contact</a></li>
-                                <li><a href="#section-info">Downloadables</a></li>
+                                <li><a href="#downloadables">Downloadables</a></li>
 				                <li><a href="https://flutterwave.com/pay/missusiform">MISS USI FORM</a></li>
                             </ul>
                         </nav>
@@ -698,7 +698,7 @@
                             <p>There are many hotels and motels available around the event location for temporary residence. Get your resevation as early as possible.</p>
                         </div>
 
-                        <div class="col-md-4 text-center">
+                        <div class="col-md-4 text-center" id="downloadables">
                             <i class="icon-download id-color mb20 size40"></i>
                             <h3>Downloadables</h3>
                             <p><a style="color: #FBA507;" href="images/team/campdaily.pdf"><b>CAMP DAILY ACTIVITIES AND SCHEDULES</b></a><br>
