--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                 <figure class="picframe mb30">
                                     <a class="image-popup" href="images/team/1.jpg">
                                         <span class="overlay-v">
-                                            <span>Interested in all digital things. Has earned several awards and has experience of being a speaker at world-class seminars.</span>
+                                            <span>You are all welcome</span>
                                         </span>
                                     </a>
                                     <img src="images/team/1.png" class="img-responsive" alt="">
@@ -149,7 +149,7 @@
                                 <figure class="picframe mb30">
                                     <a class="image-popup" href="images/team/2.png">
                                         <span class="overlay-v">
-                                            <span>Interested in all the digital things. Has earned several awards and has been a speaker at many world-class seminars.</span>
+                                            <span>...</span>
                                         </span>
                                     </a>
                                     <img src="images/team/2.png" class="img-responsive" alt="">
@@ -165,7 +165,7 @@
                                 <figure class="picframe mb30">
                                     <a class="image-popup" href="images/team/3.png">
                                         <span class="overlay-v">
-                                            <span>Interested in all the digital things. Has earned several awards and has been a speaker at many world-class seminars.</span>
+                                            <span>...</span>
                                         </span>
                                     </a>
                                     <img src="images/team/3.png" class="img-responsive" alt="">
