--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                             <span>You are all welcome</span>
                                         </span>
                                     </a>
-                                    <img src="images/team/1.png" class="img-responsive" alt="">
+                                    <img src="images/team/1.jpg" class="img-responsive" alt="">
                                 </figure>
 
                                 <h3>Oba George Adedayo Akande</h3>
