--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
                         <div class="col-md-4 ">
                             <div class="profile_pic text-center">
                                 <figure class="picframe mb30">
-                                    <a class="image-popup" href="images/team/1.jpg">
+                                    <a class="image-popup" href="images/team/1.png">
                                         <span class="overlay-v">
                                             <span>You are all welcome</span>
                                         </span>
                                     </a>
-                                    <img src="images/team/1.jpg" class="img-responsive" alt="">
+                                    <img src="images/team/1.png" class="img-responsive" alt="">
                                 </figure>
 
                                 <h3>Oba George Adedayo Akande</h3>
@@ -256,7 +256,7 @@
                             <div class="col-md-3 col-xs-6 wow fadeIn" data-wow-delay="0">
                                 <div class="de_count">
                                     <i class="icon_id-2 id-color" data-animation="fadeInDown" data-delay="0"></i>
-                                    <h3 class="timer" data-to="8" data-speed="2500">0</h3>
+                                    <h3 class="timer" data-to="4" data-speed="2500">0</h3>
                                     <span>Contenstants</span>
                                 </div>
                             </div>
